Update the firefox homepage

--- a/share/homepage/home.html
+++ b/share/homepage/home.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--TODO : unweebafy-->
-<!-- original homepage by noha, javascript by nullbyte, modified slightly and cleaned by geino.
-This homepage has been tested with Firefox and Chrome. -->
-
 <html>
-
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
@@ -113,20 +108,18 @@ h1 {
 
       <span>News</span>
       <a style="padding-left:10px" href="http://phoronix.com/r">phoronix</a>
-      <a href="https://comptoir-harware.com">comptoir</a>
-      <a href="https://comptoir-harware.com">ars-technica</a>
+      <a href="https://www.reddit.com/r/worldnews/">r/worldnews</a>
       <br />
 
       <span>Reddit</span>
-      <a href="https://www.reddit.com/r/unixporn/">unix</a>
-      <a href="https://www.reddit.com/r/EarthPorn/">earth</a>
-      <a href="https://www.reddit.com/r/worldnews/">worldnews</a>
+      <a href="https://www.reddit.com/r/unixporn/">unixporn</a>
+      <a href="https://www.reddit.com/r/EarthPorn/">earthporn</a>
       <a href="https://www.reddit.com/r/Cooking/">cooking</a>
       <a href="https://www.reddit.com/r/tech/">tech</a>
       <br />
 
       <span>Tools</span>
-      <a style="padding-left:10px" href="http://file.fnux.ch">files</a>
+      <a style="padding-left:10px" href="http://paste.gnugen.ch">gnupaste</a>
       <a href="https://github.com">github</a>
       <a href="https://gitlab.gnugen.ch">gitlab</a>
       <a href="https://mail.fnux.ch">mail</a>
