Update firefox homepage

--- a/share/homepage/home.html
+++ b/share/homepage/home.html
@@ -2,66 +2,9 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+   <link rel="stylesheet" type="text/css" href="main.css">
    <title>Home</title>
-
 </head>
-<style>
-a{
-   color:#c3c3c3;
-   font-family:"Segoe UI light";
-   font-size:25px;
-   text-decoration:none;
-   margin-left:5px;
-   transition-property: color;
-   transition-duration: .2s;
-   transition-timing-function: linear;
-}
-body{
-   padding-left:10px;
-   padding-right:10px;
-   font-family:"Segoe UI light";
-   color:#c8c8c8;
-   font-size:34px;
-   background:#FBFBFB;
-}
-
-span{
-   margin-left:10px;
-   text-family:"segoe UI";
-   color:#c3c3c3;
-   text-align: center;
-}
-
-a:hover { color:#A9BFA5}
-
-.boxed {
-   border: 1px solid #e6e6e6;
-   padding: 5px;
-   color: #494949;
-   background-color: #ffffff;
-   width: 760px;
-   margin-left: -390px;
-   margin-right: auto;
-   position:absolute;
-   left: 50%;
-   top: 40%;
-}
-
-h1 {
-   margin-bottom: 10px;
-   margin-top: -73px;
-   padding-right: 9px;
-   position: 		   absolute;
-   top:               40%;
-   left:              50%;
-   -webkit-transform: translate(-50%, -50%);
-   transform:         translate(-50%, -50%);
-
-}
-
-</style>
-
 <body>
    <h1 align="center" id="message"></h1>
    <script type="text/javascript">
@@ -94,16 +37,14 @@ h1 {
       <a style="padding-left:10px" href="http://www.youtube.com">youtube</a>
       <a href="http://www.deviantart.com">deviant</a>
       <a href="http://www.pixiv.net">pixiv</a>
-      <a href="http://www.konachan.com">konachan</a>
-      <a href="https://danbooru.donmai.us/">danbooru</a>
+      <a href="http://www.konachan.net">konachan</a>
+      <a href="http://safebooru.org/">safebooru</a>
       <br />
 
       <span>EPFL</span>
       <a style="padding-left:10px" href="http://moodle.epfl.ch/">moodle</a>
       <a href="http://isa.epfl.ch/">is-academia</a>
-      <a href="https://ic.epfl.ch/">ic</a>
-      <a href="https://epfl.ch/">front</a>
-      <a href="https://ewa.epfl.ch/">ewa</a>
+      <a href="https://it.epfl.ch/backoffice">ServiceNow</a>
       <br />
 
       <span>News</span>
@@ -113,8 +54,6 @@ h1 {
 
       <span>Reddit</span>
       <a href="https://www.reddit.com/r/unixporn/">unixporn</a>
-      <a href="https://www.reddit.com/r/EarthPorn/">earthporn</a>
-      <a href="https://www.reddit.com/r/Cooking/">cooking</a>
       <a href="https://www.reddit.com/r/tech/">tech</a>
       <br />
 
@@ -122,8 +61,8 @@ h1 {
       <a style="padding-left:10px" href="http://paste.gnugen.ch">gnupaste</a>
       <a href="https://github.com">github</a>
       <a href="https://gitlab.gnugen.ch">gitlab</a>
-      <a href="https://mail.fnux.ch">mail</a>
+      <a href="https://git.fnux.ch">gogs</a>
+      <a href="https://webmail.fnux.ch">mail</a>
 
    </div>
-
 </body>
