--- a/share/homepage/home.html
+++ b/share/homepage/home.html
@@ -44,7 +44,7 @@
       <span>EPFL</span>
       <a style="padding-left:10px" href="http://moodle.epfl.ch/">moodle</a>
       <a href="http://isa.epfl.ch/">is-academia</a>
-      <a href="https://it.epfl.ch/backoffice">ServiceNow</a>
+      <a href="https://it.epfl.ch/backoffice">snow</a>
       <br />
 
       <span>News</span>
