--- a/share/homepage/home.html
+++ b/share/homepage/home.html
@@ -27,12 +27,6 @@
    </script>
 
    <div class="boxed">
-      <span>Social</span>
-      <a style="padding-left:10px" href="https://twitter.com">twitter</a>
-      <a href="http://www.reddit.com">reddit</a>
-      <a href="http://4chan.org">4chan</a>
-      <br />
-
       <span>Media</span>
       <a style="padding-left:10px" href="http://www.youtube.com">youtube</a>
       <a href="http://www.deviantart.com">deviant</a>
@@ -45,15 +39,19 @@
       <a style="padding-left:10px" href="http://moodle.epfl.ch/">moodle</a>
       <a href="http://isa.epfl.ch/">is-academia</a>
       <a href="https://it.epfl.ch/backoffice">snow</a>
+      <a href="https://blogs.epfl.ch/sdesk">blog/sdesk</a>
       <br />
 
       <span>News</span>
       <a style="padding-left:10px" href="http://phoronix.com/r">phoronix</a>
       <a href="https://www.reddit.com/r/worldnews/">r/worldnews</a>
+      <a href="https://news.ycombinator.com/">hackernews</a>
       <br />
 
       <span>Reddit</span>
       <a href="https://www.reddit.com/r/unixporn/">unixporn</a>
+      <a href="https://www.reddit.com/r/earthporn/">earthporn</a>
+      <a href="https://www.reddit.com/r/science/">science</a>
       <a href="https://www.reddit.com/r/tech/">tech</a>
       <br />
 
@@ -61,8 +59,7 @@
       <a style="padding-left:10px" href="http://paste.gnugen.ch">gnupaste</a>
       <a href="https://github.com">github</a>
       <a href="https://gitlab.gnugen.ch">gitlab</a>
-      <a href="https://git.fnux.ch">gogs</a>
-      <a href="https://webmail.fnux.ch">mail</a>
+      <a href="https://webmail.fnux.ch">webmail</a>
 
    </div>
 </body>
