Add "FedoraProject" entry to browser-homepage

--- a/browser-homepage/.local/share/homepage/home.html
+++ b/browser-homepage/.local/share/homepage/home.html
@@ -35,6 +35,13 @@
       <a href="https://www.reddit.com/r/tech/">tech</a>
       <br />
 
+      <span>Fedora</span>
+      <a href="https://bugzilla.redhat.com/">bugzilla</a>
+      <a href="https://copr.fedorainfracloud.org/">copr</a>
+      <a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki">wiki</a>
+      <a href="https://fedoramagazine.org/">magazine</a>
+      <br />
+
       <span>Tools</span>
       <a style="padding-left:10px" href="http://paste.gnugen.ch">gnupaste</a>
       <a href="https://github.com">github</a>
