Add fedora's packages to the browser-homepage + fix str mountpoint usage in xmobar

--- a/data/browser-homepage/home.html
+++ b/data/browser-homepage/home.html
@@ -32,6 +32,7 @@
       <a href="https://copr.fedorainfracloud.org/">copr</a>
       <a href="https://fedoraproject.org/wiki/Fedora_Project_Wiki">wiki</a>
       <a href="https://fedoramagazine.org/">magazine</a>
+      <a href="https://apps.fedoraproject.org/packages/">packages</a>
       <br />
 
       <span>Tools</span>
